[project]
name = "project-9"
version = "0.1.0"
description = ""
authors = [
    {name = "Parsibor",email = "parsibor@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
